# badcad

./: .gitignore  LICENSE  README.md  badcad.py  demo.ipynb  help_manifold3d.md  pyproject.toml  setup.py
badcad/: __init__.py  badcad.py  display.py  gcode.py  loft.py  normals.py  path.py  preview.py  svg.py  text.py  utils.py
examples/: paddle.ipynb  readme.ipynb
tests/: conftest.py  test_infrastructure_validation.py
